# space_invaders

./: .clang-tidy  .gitignore  CMakeLists.txt  build-windows.bat  build_linux.sh  windows_build_mingw.sh
include/: Alien.h  Barrier.h  CellRect.h  Colors.h  Entity.h  Explosion.h  Game.h  GameState.h  GameStates.h  Laser.h  Logger.h  MysteryShip.h  ResourceManager.h  SpaceShip.h
include/states/: GameOverState.h  GameState.h  GameStateManager.h  HighScoreState.h  MenuState.h  PausedState.h  PlayingState.h  QuitState.h
src/: Alien.cpp  Barrier.cpp  CellRect.cpp  Entity.cpp  Explosion.cpp  Game.cpp  GameStateManager.cpp  GameStates.cpp  Laser.cpp  MysteryShip.cpp  ResourceManager.cpp  SpaceShip.cpp  main.cpp
src/states/: GameOverState.cpp  GameStateManager.cpp  HighScoreState.cpp  MenuState.cpp  PausedState.cpp  PlayingState.cpp  QuitState.cpp
